# WiFiAnalyzer

./: build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nl80211.h  wifianalyzer.cpp
app/src/main/java/com/vrem/wifianalyzer/: MainActivity.java  OpenHotspotActivity.java  WifiListAdapter.java
app/src/main/java/com/vrem/wifianalyzer/navigation/: NavigationGroup.java  NavigationMenu.java
app/src/main/java/com/vrem/wifianalyzer/navigation/items/: NavigationItemFactory.java
app/src/main/java/com/vrem/wifianalyzer/wifi/openhotspot/: OpenHotspotAdapter.java  OpenHotspotFragment.java
app/src/main/java/com/vrem/wifianalyzer/wifi/scanner/: Scanner.java  ScannerService.java
app/src/main/res/layout/: activity_open_hotspot.xml  main_activity.xml  open_hotspot.xml  wifi_item_listview.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/vrem/wifianalyzer/: MainContextHelper.java
distribution/include/: netlink-types.h
gradle/wrapper/: gradle-wrapper.properties
